rules.v4
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

:unifi-before-input - [0:0]
:unifi-user-input - [0:0]
:unifi-after-input - [0:0]

:unifi-before-forward - [0:0]
:unifi-user-forward - [0:0]
:unifi-after-forward - [0:0]

:unifi-before-output - [0:0]
:unifi-user-output - [0:0]
:unifi-after-output - [0:0]

-A INPUT -j unifi-before-input
-A INPUT -j unifi-user-input
-A INPUT -j unifi-after-input
-A FORWARD -j unifi-before-forward
-A FORWARD -j unifi-user-forward
-A FORWARD -j unifi-after-forward
-A OUTPUT -j unifi-before-output
-A OUTPUT -j unifi-user-output
-A OUTPUT -j unifi-after-output

# General
-A unifi-before-input -i lo -j ACCEPT
-A unifi-before-output -o lo -j ACCEPT
-A unifi-before-input -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A unifi-after-output -o eth1 -j ACCEPT

# VPN
-A unifi-before-forward -s 172.26.16.0/24 -m policy --dir in --pol ipsec --proto esp -j ACCEPT
-A unifi-before-forward -d 172.26.16.0/24 -m policy --dir out --pol ipsec --proto esp -j ACCEPT
-A unifi-before-forward -s 192.168.128.0/20 -m policy --dir in --pol ipsec --proto esp -j ACCEPT
-A unifi-before-forward -d 192.168.128.0/20 -m policy --dir out --pol ipsec --proto esp -j ACCEPT
-A unifi-before-forward -s 10.208.0.0/16 -m policy --dir in --pol ipsec --proto esp -j ACCEPT
-A unifi-before-forward -d 10.208.0.0/16 -m policy --dir out --pol ipsec --proto esp -j ACCEPT
-A unifi-before-forward -s 10.110.0.0/20 -m policy --dir in --pol ipsec --proto esp -j ACCEPT
-A unifi-before-forward -d 10.110.0.0/20 -m policy --dir out --pol ipsec --proto esp -j ACCEPT

# WAN_LOCAL
-A unifi-user-input -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A unifi-user-input -m conntrack --ctstate INVALID -j DROP
-A unifi-user-input -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A unifi-user-input -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A unifi-user-input -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A unifi-user-input -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A unifi-user-input -i eth0 -p tcp -m tcp --dport 22 -j ACCEPT
-A unifi-user-input -i eth0 -p udp -m multiport --dports 500,4500 -j ACCEPT

# WAN_IN
-A unifi-user-forward -i eth0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A unifi-user-forward -i eth0 -m conntrack --ctstate INVALID -j DROP

# WAN_OUT
-A unifi-user-output -o eth0 -j ACCEPT

# LAN_LOCAL
-A unifi-user-input -i eth1 -p tcp -m tcp --dport 22 -j ACCEPT
-A unifi-user-input -i eth1 -p udp -m udp --dport 23513 -j ACCEPT
-A unifi-user-input -i eth1 -p udp -m multiport --dports 500,4500 -j ACCEPT

# LAN_IN
-A unifi-user-forward -s 192.168.2.0/24 -j ACCEPT

# LAN_OUT
-A unifi-user-forward -d 192.168.2.0/24 -j ACCEPT

COMMIT

*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
# Port forward
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8443 -j DNAT --to-destination 192.168.2.12:8443
# --
-A POSTROUTING -o eth0 -m policy --dir out --pol ipsec -j ACCEPT
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
